@@ -2,6 +2,7 @@ package com.group8.evcoownership.filter;
 
 import com.group8.evcoownership.entity.User;
 import com.group8.evcoownership.repository.UserRepository;
+import com.group8.evcoownership.service.LogoutService;
 import com.group8.evcoownership.utils.JwtUtil;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -10,21 +11,25 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
+
     @Autowired
     private JwtUtil jwtUtil;
 
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private LogoutService logoutService;
 
     @Override
     protected void doFilterInternal(@NonNull HttpServletRequest request,
@@ -32,26 +37,49 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                                     @NonNull FilterChain filterChain) throws ServletException, IOException {
         final String authHeader = request.getHeader("Authorization");
 
-//        String path = request.getRequestURI();
-//        //pỏ qua filter cho các API public
-//        if (path.startsWith("/api/auth/")) {
-//            filterChain.doFilter(request, response);
-//            return;
-//        }
-
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
             return;
         }
 
         String token = authHeader.substring(7);
+
+        // CHECK BLACKLIST
+        if (logoutService.isTokenBlacklisted(token)) {
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.setContentType("application/json");
+            response.setCharacterEncoding("UTF-8");
+            response.getWriter().write(
+                    "{\"error\":\"Token đã bị thu hồi. Vui lòng đăng nhập lại.\"}"
+            );
+            response.getWriter().flush();
+            return;
+        }
+
         if (jwtUtil.validateToken(token)) {
             String email = jwtUtil.extractEmail(token);
             User user = userRepository.findByEmail(email).orElse(null);
 
             if (user != null) {
-                UsernamePasswordAuthenticationToken auth =
-                        new UsernamePasswordAuthenticationToken(user, null, List.of());
+                SimpleGrantedAuthority authority = new SimpleGrantedAuthority(
+                        "ROLE_" + user.getRole().getRoleName().toString()
+                );
+
+                // ========== TẠO CUSOM TOKEN ==========
+                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                        user,
+                        null,
+                        Collections.singletonList(authority)
+                ) {
+                    // Override getName() để tránh gọi toString()
+                    @Override
+                    public String getName() {
+                        // Trả về email thay vì toString()
+                        return user.getEmail();
+                    }
+                };
+                // ========== KẾT THÚC SỬA ==========
+
                 SecurityContextHolder.getContext().setAuthentication(auth);
             }
         }
@@ -62,11 +90,11 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     @Override
     protected boolean shouldNotFilter(@NonNull HttpServletRequest request) throws ServletException {
         String path = request.getServletPath();
-        // Bỏ qua filter cho các API public (register, login, refresh, swagger docs)
-        return path.startsWith("/api/auth/")
+        return path.startsWith("/api/auth/register")
+                || path.startsWith("/api/auth/login")
+                || path.startsWith("/api/auth/refresh")
                 || path.startsWith("/v3/api-docs")
                 || path.startsWith("/swagger")
                 || path.startsWith("/swagger-ui");
     }
-    //chua comment
 }
